# ChangeLog for www-client/mozilla-firefox
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/ChangeLog,v 1.166 2006/07/23 12:17:16 genstef Exp $

  23 Jul 2006; Stefan Schweizer <genstef@gentoo.org>
  mozilla-firefox-2.0_beta1.ebuild:
  Change nss depend to version 3.11.1-r1 thanks to Caster <caster@matfyz.cz>,
  Walter Meinl <wuno@lsvw.de> and Peter Ebden <peter.ebden@ac.co.nz> in bug
  141264

  20 Jul 2006; Martin Schlemmer <azarah@gentoo.org>
  mozilla-firefox-2.0_beta1.ebuild:
  Fix LINGUAS typo.

  20 Jul 2006; Martin Schlemmer <azarah@gentoo.org>
  mozilla-firefox-2.0_beta1.ebuild:
  Update uriloader patch.  Install 2.0b1's .desktop with 2.0 suffix.

*mozilla-firefox-2.0_beta1 (20 Jul 2006)

  20 Jul 2006; Martin Schlemmer <azarah@gentoo.org>
  +mozilla-firefox-2.0_beta1.ebuild:
  Add cleaned up ebuild for 2.0b1 from Piotr Jaroszynski <peper@aster.pl>. Fix
  up dist stuff to use Gentoo infra, and add back dropped patches and prefs.

  07 Jul 2006; Stefan Schweizer <genstef@gentoo.org>
  mozilla-firefox-1.5.0.4.ebuild:
  Add linguas to IUSE, bug 136953

  07 Jul 2006; Diego Pettenò <flameeyes@gentoo.org>
  mozilla-firefox-1.5.0.4.ebuild:
  Add ~x86-fbsd keyword.

  05 Jul 2006; anarchy <anarchy@gentoo.org> mozilla-firefox-1.5.0.4.ebuild:
  arm support stable via vapier bug #137580

  12 Jun 2006; Jory A. Pratt <anarchy@gentoo.org>
  -mozilla-firefox-1.0.8.ebuild, -mozilla-firefox-1.5-r9.ebuild,
  -mozilla-firefox-1.5-r11.ebuild, -mozilla-firefox-1.5.0.1-r2.ebuild,
  -mozilla-firefox-1.5.0.1-r3.ebuild, -mozilla-firefox-1.5.0.1-r4.ebuild,
  -mozilla-firefox-1.5.0.2.ebuild, -mozilla-firefox-1.5.0.2-r1.ebuild,
  -mozilla-firefox-1.5.0.3.ebuild:
  removed most vulnerable versions, will remove 1.0.7 soon as ia64 marks
  1.5.0.4 stable

  06 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  mozilla-firefox-1.5.0.4.ebuild:
  Stable on sparc wrt security #135254
