@@ -48,17 +48,17 @@ DIST firefox-da-1.5.0.4.xpi 142462 RMD160 91c4463cdf494f1a5a43d9f1576b1de582873a
 DIST firefox-de-1.5.0.4.xpi 141050 RMD160 4bd3ee06996f4df2f9828d44370932df3c2c1a62 SHA1 59ede920b90ee9dbc9d93d888a6e6bd9fd39b011 SHA256 13bee8b4dc7a00eb84b58e0293e4403f276ea01ae7ea69959debabf5de5b695a
 DIST firefox-el-1.5.0.4.xpi 146941 RMD160 3a46e06ebd08e5c30772031268df4663cddf6f25 SHA1 437011040700e7408ed94c17f38e49d699ff90df SHA256 e19553b5831bc81aee3159c86536ee402b2445e1cc9ce816022df01b83103f1b
 DIST firefox-en-GB-1.5.0.4.xpi 139579 RMD160 ab593903fd1c80630fb66f33f5fbbda65d7fcfb7 SHA1 345ea2b1f858e8591906bd498a7b50747cb79f64 SHA256 1d495265c913df2bb0738ed0360456676c483690c48fda043bd326ddea47061f
-DIST firefox-es-AR-1.5.0.4.xpi 146126 RMD160 001f8c09ac4c36295bd15e4b7798320c4fc0f246 SHA256 f8b5ce171c9bb6f6f6399fc1177c6248eb9e6a82c6a6679eac4c08cea6d0a556
+DIST firefox-es-AR-1.5.0.4.xpi 146126 RMD160 001f8c09ac4c36295bd15e4b7798320c4fc0f246 SHA1 57ea8f4c18d71bb5a888311ad4c2d6353e2c9cc9 SHA256 f8b5ce171c9bb6f6f6399fc1177c6248eb9e6a82c6a6679eac4c08cea6d0a556
 DIST firefox-es-ES-1.5.0.4.xpi 132483 RMD160 63b2d1d1e05b12e6819cba593bfcb63a4c70a23e SHA1 0db2c1407de5e828b940c73e04c51a84622d1834 SHA256 1ef4382fdab1e9d118ce476b9cb3db01017b358eb9353fe5dd7ee3e3e1cafb16
 DIST firefox-fi-1.5.0.4.xpi 143014 RMD160 dc4f2e453fda14b5ca63e930cc721d14eeec8247 SHA1 a9748b130ca466347c6064a4278aa1a57b87b3ea SHA256 1691ec3c462c3b739cf9d1337d2e509e935e13a160d325ffc2bdec8ef4d9a09d
-DIST firefox-fr-1.5.0.4.xpi 203230 RMD160 89d41f8c618a0db78d40396dd51e13d00c138090 SHA256 4a93fbb1201ad5bb1994827a9607b51516b8243a65e226ac0cd24bb348d4704e
+DIST firefox-fr-1.5.0.4.xpi 203230 RMD160 89d41f8c618a0db78d40396dd51e13d00c138090 SHA1 40df2c25886d5d5084b20a0bbd80e3c322ecfa98 SHA256 4a93fbb1201ad5bb1994827a9607b51516b8243a65e226ac0cd24bb348d4704e
 DIST firefox-ga-IE-1.5.0.4.xpi 144794 RMD160 8a52e1225258e29c4ee41afcb0dec8769a9e14d0 SHA1 b258f8cb5445974c84e8a58ff045aeb10a51cecf SHA256 0d3f80253faaad3ff6fb65ddda1ffd7bbb2e40b1fca72d3784c28439ddb04d5a
 DIST firefox-he-1.5.0.4.xpi 144977 RMD160 4b71e36805dd631b2536527961275efea358bde4 SHA1 f034774ef40f86b0e53d29ce8319c992dddcb89a SHA256 f6a2c05b8f75dde0ef619e5359b08cbcea2985cf0066d6361f299d9642628cba
 DIST firefox-hu-1.5.0.4.xpi 154453 RMD160 cc62e48dad9f9a036ca5e3500a02f97836f64703 SHA1 7e46dbb2cf807de83b768ab38b3a92d1667235c2 SHA256 e020a78e4cc1e0a5d500e5e7117e3d7a25ab3d911379dbb91e30296bfc03f2a4
 DIST firefox-it-1.5.0.4.xpi 156720 RMD160 9436b85bd4bfee72e8d913f63a9a04b4d912cc43 SHA1 dae33827a7d7dd1f87839f1d84f58bfa56176d66 SHA256 48e7b7acced9f19e32bba3bda33944bde0a1ef7b455c09cb6ecf61eba328cff2
 DIST firefox-ja-1.5.0.4.xpi 162443 RMD160 28d00f45ca32db2db6df525ba642268bdca646af SHA1 08c42654a33af3546a1728285ed70136eba5ab7b SHA256 029803a633489e7e3bbab0d52a0841043a90739d3c595b8a222aa4ad0c48a407
 DIST firefox-ko-1.5.0.4.xpi 149476 RMD160 4861d2d1aeede061ec19d78a4510309e1558182c SHA1 5c557b55b8a2e477e2539ed6c4bf602f72c55e2e SHA256 c69333d427893205e1b5f42fbb11e0d6eb6353e20064ea534fb2b6853debc7cc
-DIST firefox-mk-1.5.0.4.xpi 162212 RMD160 53fec6f0e13e4b98cc6fbf3aaf29b04005e0a601 SHA256 8a2c979b8f3c3e44d1f966db3e7ea4a256224b86310d12097714d81720920e0e
+DIST firefox-mk-1.5.0.4.xpi 162212 RMD160 53fec6f0e13e4b98cc6fbf3aaf29b04005e0a601 SHA1 ffd9ff391483824b046d2086d94adb922891c3d8 SHA256 8a2c979b8f3c3e44d1f966db3e7ea4a256224b86310d12097714d81720920e0e
 DIST firefox-nb-NO-1.5.0.4.xpi 151778 RMD160 f5aa815feba0d7de3df259f69fd0b46cfaba1b58 SHA1 8d416412f108c1519da2b76cedc509215bb065eb SHA256 ffc83a824416fe7b07b66938577a0e7abb11b37130953b97b50b32320642b757
 DIST firefox-nl-1.5.0.4.xpi 150930 RMD160 bfcae25f0458a797c513911741209830b6cbd85c SHA1 c2034f791caf559e49888b43f7665987ef90dddb SHA256 69c5a810fc56169b1f082bbfe60603b518f0feea4234197d4fafdea552ab75ab
 DIST firefox-pl-1.5.0.4.xpi 243664 RMD160 2b61a91534255efb494af04bc392c01e297d1a24 SHA1 3ff52e7d0805c3273d3c74871d0b06b1b3da6816 SHA256 c15c694134d5c8e4423cb2d0ce343c142ae7ffeff99f75a148d7fccc067e326b
@@ -66,14 +66,14 @@ DIST firefox-pt-BR-1.5.0.4.xpi 143567 RMD160 43dae569b52f9dd0820a8fe5430987ccc95
 DIST firefox-ro-1.5.0.4.xpi 144113 RMD160 02415dc284c6007eb962450dd964eee812588a83 SHA1 2dbb8dd074bee09054840d8bc9ba4da8dd919052 SHA256 a7ec1478e6ba1115980e5ca1c226c0339f703448c0affcbfed82dfa5faf628cb
 DIST firefox-ru-1.5.0.4.xpi 170083 RMD160 e3beed928f3b63d1d72fcc70b843500b063513b2 SHA1 f08c275f77a7cac37f99f8ac2492c1bef0a14cd6 SHA256 015adf97c415938e8f39e342f99e0a72630c8b68cafa38d016020eae0fe2a6a4
 DIST firefox-sk-1.5.0.4.xpi 153991 RMD160 438d1bbfdb8eace6dac0caa8b1345df9cf045cd1 SHA1 a5ea8aba3dfc0cbb6a30256556d01e331564ed3e SHA256 be38d47f008635c9e3510f68f7bef2db9c9ad426b203503a0da0e88f9ecbb819
-DIST firefox-sl-1.5.0.4.xpi 145204 RMD160 0c2b692aebbe1f92b17ca052cc875b0d4b02eff5 SHA256 fd4dbbca8d389807eeee4e0695f1958ed354531673d3340c0b499a8faf1785f2
+DIST firefox-sl-1.5.0.4.xpi 145204 RMD160 0c2b692aebbe1f92b17ca052cc875b0d4b02eff5 SHA1 30aaadb8268ddc506421f1d0001d99d2e217195f SHA256 fd4dbbca8d389807eeee4e0695f1958ed354531673d3340c0b499a8faf1785f2
 DIST firefox-sv-SE-1.5.0.4.xpi 154913 RMD160 e9cd9058e3d743a6520179ce2bea308f725ecfd4 SHA1 98b050887a8b85cec0fef6b041bc88ea9fb6eae9 SHA256 20a1520d3165065b06fac0d87a55ae6a1ebdce793ff1930f392b7bef08cb5e47
 DIST firefox-tr-1.5.0.4.xpi 136158 RMD160 181570ee5227c0ae04478e334e6f4850ca27db40 SHA1 bad91728a0cbe39e58b742d1b117afd62ad9f57a SHA256 a760bcece9e86593a7225be11ee1bcfff62d6ddc2f168ceb45a6c812ca3c1fed
-DIST firefox-zh-CN-1.5.0.4.xpi 136417 RMD160 23c29a0de219df548d51d2c355668477d1aaa95d SHA256 1c0f3e52410a9836a1eb41bea112a903c56e83ffed3e72b45259228f921b1d50
+DIST firefox-zh-CN-1.5.0.4.xpi 136417 RMD160 23c29a0de219df548d51d2c355668477d1aaa95d SHA1 30c45464df72081d5806990412bf6d501b2921b9 SHA256 1c0f3e52410a9836a1eb41bea112a903c56e83ffed3e72b45259228f921b1d50
 DIST firefox-zh-TW-1.5.0.4.xpi 128230 RMD160 0fb0cadc09df73a46842dc0ff11a68dca1867a7c SHA1 ef4818545a8b8c28589a22d5cc1bf431f2b112f3 SHA256 de76b8525ad32a87239659635b720a630eb04abe396275d419436837706199ce
 DIST moz_libart_lgpl-2.3.10p1.tar.bz2 103063 RMD160 c1ab4b41fe40e3f63dbf95476a1cc125d5537be7 SHA1 ba65e212ca5c5fa79d26305a706a2ad996606b7e SHA256 8cc868780a0763a5afaa36f92d7c5f9efe248b4e05440f645e4e91ddfdd6d1b5
 DIST mozilla-1.7.12-patches-1.2.tar.bz2 108346 RMD160 a9817e271a903b52bb6eef042c50208dc92162eb SHA1 ce78eb60014af92a8830e68f78b9c7f954fed7b0 SHA256 39ef52ad02435d5078aa2bafd13b9197b7c7b14bbdf1fc6149f8e9fea2f5c276
-DIST mozilla-firefox-1.5.0.4-patches-1.1.tar.bz2 41717 RMD160 7183515a575ec8fdf70b5b2ef664323ef2610238 SHA1 929561cc6041949a619aae78b6192b2b1fe5c0b9 SHA256 ef9beecbde0ad2af0fb5662164ac903ee8b111c4293133bb76e930c9be1eefc6
+DIST mozilla-firefox-1.5.0.4-patches-1.2.tar.bz2 36690 RMD160 fe19311ce664e8b82feb3e56bc21559a95e58198 SHA1 6b238330f9b6409b2bbab18182fbdd74a423143a SHA256 b943045f29213a89bebd7b265d428f0d3e3c30c698dd37e6ea5141102f6d9580
 DIST mozilla-firefox-2.0_beta1-ca.xpi 171446 RMD160 3214853906b56bf1ff3ee060eedb98c7ac2b5b8a SHA1 9766ded15f7dea1e275a89fb20156a714efce101 SHA256 ef8c41d5e0a7154151648bb1419008ce32a131aaeac5e296c0cf65aa42913015
 DIST mozilla-firefox-2.0_beta1-cs.xpi 159692 RMD160 20707ba30c11ce9ab5659774a48335ee429c7b2f SHA1 2f61c1a6bcbf25e962d23c9d59db7ab73414deb0 SHA256 df341a587bde8178cd34a32666f9a01f475ae60ce51ce28e97000972bc603514
 DIST mozilla-firefox-2.0_beta1-da.xpi 150658 RMD160 ffff5d2d9dfb08c6223d05a1423980078d1fea1b SHA1 5fc1143c8ba4f70e2cb33546610d1c46fd2b697a SHA256 eaa2a1a9b658c54dc2ca35ede7c714d073cc4e125e6dca2bbdc1875c3e1010b8
@@ -106,18 +106,18 @@ EBUILD mozilla-firefox-1.0.7-r4.ebuild 9847 RMD160 539d5c3ce8b2d225fa8871fd2722b
 MD5 88a8a7b16c2a9376c68e91be09ea0ba5 mozilla-firefox-1.0.7-r4.ebuild 9847
 RMD160 539d5c3ce8b2d225fa8871fd2722b52506ab5eef mozilla-firefox-1.0.7-r4.ebuild 9847
 SHA256 01fbb317fdc32cdcf7ece63cc31df00b546b835c87e5e730f017a0b5b10ca7e8 mozilla-firefox-1.0.7-r4.ebuild 9847
-EBUILD mozilla-firefox-1.5.0.4.ebuild 9279 RMD160 2afce326fc4d0ff63547e64d72225a7488030435 SHA1 a72200b25d1ca1a9d1858e86ab3baa43dd3e5e71 SHA256 fac96cb4565fb914aec19427387943e2f6947c8367c069a37aaf72050a7c5984
-MD5 d12305269228bc11fa5012a182ba948e mozilla-firefox-1.5.0.4.ebuild 9279
-RMD160 2afce326fc4d0ff63547e64d72225a7488030435 mozilla-firefox-1.5.0.4.ebuild 9279
-SHA256 fac96cb4565fb914aec19427387943e2f6947c8367c069a37aaf72050a7c5984 mozilla-firefox-1.5.0.4.ebuild 9279
+EBUILD mozilla-firefox-1.5.0.4.ebuild 9193 RMD160 334c41efe666af9c74c915d619973c61d4d8cdb8 SHA1 bd96982fd69cebb85ec1f649b3ab570a9570929f SHA256 20dd66ac412ce3f987c76d4580e820596b454e78da853818771222c449c806b9
+MD5 842d598b631549b4e703c55199859f90 mozilla-firefox-1.5.0.4.ebuild 9193
+RMD160 334c41efe666af9c74c915d619973c61d4d8cdb8 mozilla-firefox-1.5.0.4.ebuild 9193
+SHA256 20dd66ac412ce3f987c76d4580e820596b454e78da853818771222c449c806b9 mozilla-firefox-1.5.0.4.ebuild 9193
 EBUILD mozilla-firefox-2.0_beta1.ebuild 7524 RMD160 a9b4b9063de741945fd987975f8d97dfd540d6e0 SHA1 23f8e7f32a4e496938c44511362fc7aa7731f02b SHA256 829370979552762531b1bd8df5080c6f8fa8c856561e0cb199a21907a5735dfe
 MD5 5c86d433aa4e97b406c80e52b334b4b3 mozilla-firefox-2.0_beta1.ebuild 7524
 RMD160 a9b4b9063de741945fd987975f8d97dfd540d6e0 mozilla-firefox-2.0_beta1.ebuild 7524
 SHA256 829370979552762531b1bd8df5080c6f8fa8c856561e0cb199a21907a5735dfe mozilla-firefox-2.0_beta1.ebuild 7524
-MISC ChangeLog 47433 RMD160 866ece8343d9e52c32784f4002c593d4b5fa9640 SHA1 c4d1ba55e35895ed5c493555b08367dc66341dff SHA256 10a716383ab24a22f5587d56dfc7cfb1133a366437fbf7c2a6a4fd0dfa073c43
-MD5 83a54e0a468bf0bd5a4afcfc8f851d9c ChangeLog 47433
-RMD160 866ece8343d9e52c32784f4002c593d4b5fa9640 ChangeLog 47433
-SHA256 10a716383ab24a22f5587d56dfc7cfb1133a366437fbf7c2a6a4fd0dfa073c43 ChangeLog 47433
+MISC ChangeLog 47900 RMD160 d9fa4617f9465d64d2a0f482f4692b7221e3c337 SHA1 1d51cfda432899daf613c2003ccc5bfaec301849 SHA256 71e6b9130f3fa54a9437cc1e7ff0e184a824ce92d795eac9ca0ff439cc92e9e4
+MD5 c418da2a24d6ef138ce6b02c8da4cc60 ChangeLog 47900
+RMD160 d9fa4617f9465d64d2a0f482f4692b7221e3c337 ChangeLog 47900
+SHA256 71e6b9130f3fa54a9437cc1e7ff0e184a824ce92d795eac9ca0ff439cc92e9e4 ChangeLog 47900
 MISC metadata.xml 160 RMD160 d5a9f0bf8989621c2bde30facb53bcae00aba709 SHA1 5015c07af2083f20f9552d7fb11afb5ea69af345 SHA256 0cc5126362a12cee42ec1197c528a804cf36859329dd2c6d9225726831d14b8b
 MD5 ce23390351fe8020387d93ee29e09a3d metadata.xml 160
 RMD160 d5a9f0bf8989621c2bde30facb53bcae00aba709 metadata.xml 160
@@ -125,9 +125,9 @@ SHA256 0cc5126362a12cee42ec1197c528a804cf36859329dd2c6d9225726831d14b8b metadata
 MD5 98150cff97ddd25ba15797a2d6c811db files/digest-mozilla-firefox-1.0.7-r4 831
 RMD160 50126eac778e9731ac4c37c9ca9cfa57eabf1aee files/digest-mozilla-firefox-1.0.7-r4 831
 SHA256 5dea84c9617a7246126afd7ceca9d9a8038d7db8fda4b10dff91dfb77abbff07 files/digest-mozilla-firefox-1.0.7-r4 831
-MD5 aee7595871dce2209b5cb5a682cc6631 files/digest-mozilla-firefox-1.5.0.4 8075
-RMD160 7d5ff0c74c2f6cdb84f0ff1f317d356fdb53491a files/digest-mozilla-firefox-1.5.0.4 8075
-SHA256 16e3db3c6995745c09eeac8bb1432730dec0c55a7cfb445c762fda5348174074 files/digest-mozilla-firefox-1.5.0.4 8075
+MD5 b5d93d6aa431f7e385cd6f81fce79ae6 files/digest-mozilla-firefox-1.5.0.4 8075
+RMD160 19b35f35059fbfb5817b6aae88dc19987adb3941 files/digest-mozilla-firefox-1.5.0.4 8075
+SHA256 118fd37f0cd1ad2d2975e760590b6b41b73b45dfe96e5f15d61f16f400ff7798 files/digest-mozilla-firefox-1.5.0.4 8075
 MD5 281ba60b49b1ffdcacc3841837d02c05 files/digest-mozilla-firefox-2.0_beta1 8144
 RMD160 5cd0bf12dc91b3112c6dc60d0c3ca234613cd50f files/digest-mozilla-firefox-2.0_beta1 8144
 SHA256 1c29587cea51a4c75200f5a40e42b4dddb9eef735440e19f90499703656d31a2 files/digest-mozilla-firefox-2.0_beta1 8144
