@@ -91,6 +91,6 @@ SHA256 1c0f3e52410a9836a1eb41bea112a903c56e83ffed3e72b45259228f921b1d50 firefox-
 MD5 62cdecb44ca5de65d110e980ddade832 firefox-zh-TW-1.5.0.4.xpi 128230
 RMD160 0fb0cadc09df73a46842dc0ff11a68dca1867a7c firefox-zh-TW-1.5.0.4.xpi 128230
 SHA256 de76b8525ad32a87239659635b720a630eb04abe396275d419436837706199ce firefox-zh-TW-1.5.0.4.xpi 128230
-MD5 638787f887cdb9005099ef1c11f1b1d8 mozilla-firefox-1.5.0.4-patches-1.1.tar.bz2 41717
-RMD160 7183515a575ec8fdf70b5b2ef664323ef2610238 mozilla-firefox-1.5.0.4-patches-1.1.tar.bz2 41717
-SHA256 ef9beecbde0ad2af0fb5662164ac903ee8b111c4293133bb76e930c9be1eefc6 mozilla-firefox-1.5.0.4-patches-1.1.tar.bz2 41717
+MD5 4c9dfaf537b5e0e812e7d64a6c5e2731 mozilla-firefox-1.5.0.4-patches-1.2.tar.bz2 36690
+RMD160 fe19311ce664e8b82feb3e56bc21559a95e58198 mozilla-firefox-1.5.0.4-patches-1.2.tar.bz2 36690
+SHA256 b943045f29213a89bebd7b265d428f0d3e3c30c698dd37e6ea5141102f6d9580 mozilla-firefox-1.5.0.4-patches-1.2.tar.bz2 36690
